--- a/src/pages/subpages/rights/index.scss
+++ b/src/pages/subpages/rights/index.scss
@@ -116,6 +116,7 @@
           }
         }
         &_detail {
+          background: #ffffff;
           flex: 1;
           border-radius: 0px 8px 8px 0px;
           opacity: 1;
